fixed z-index and keyframe

--- a/src/components/ApplianceButton/ApplianceButton.module.scss
+++ b/src/components/ApplianceButton/ApplianceButton.module.scss
@@ -80,6 +80,15 @@
 }
 
 //wave animation
+@-webkit-keyframes animate {
+  0% {
+    transform: translate(-50%, -75%) rotate(0deg);
+  }
+  100% {
+    transform: translate(-50%, -75%) rotate(360deg);
+  }
+}
+
 @keyframes animate {
   0% {
     transform: translate(-50%, -75%) rotate(0deg);
